# gwasm-runner

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Tutorial.md  crates.js  runner-update.sh  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/brass/: Cargo.toml
backend/brass/src/: config.rs  lib.rs  runner.rs  task.rs
backend/src/: lib.rs  local_runner.rs  workdir.rs
backend/unlimited/: Cargo.toml
backend/unlimited/src/: lib.rs  runner.rs
backend/yagna/: Cargo.toml
backend/yagna/src/: demand.rs  lib.rs  negotiator.rs  runner.rs  storage.rs
gwasm-api/: Cargo.toml
gwasm-api/examples/: sum100.rs
gwasm-api/src/: blob.rs  blob_old.rs  dispatcher.rs  error.rs  executor.rs  lib.rs  map_reduce.rs  merger.rs  splitter.rs  task_params.rs  taskdef.rs
gwasm-dispatcher/: Cargo.toml
gwasm-dispatcher/examples/: sum100.rs
gwasm-dispatcher/src/: blob.rs  dispatcher.rs  error.rs  lib.rs  merger.rs  splitter.rs  taskdef.rs
gwasm_dispatcher/: all.html  index.html  sidebar-items.js  struct.Blob.html  struct.Output.html  trait.SplitContext.html
gwasm_dispatcher/blob/: struct.Blob.html  struct.Output.html
gwasm_dispatcher/dispatcher/: enum.ApiError.html  fn.run.html  index.html  sidebar-items.js  type.TaskResult.html
gwasm_dispatcher/splitter/: trait.SplitContext.html
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
runtime/: Cargo.toml
runtime/spwasm/: Cargo.toml
runtime/spwasm/src/: lib.rs
runtime/src/: lib.rs
runtime/wasmtime/: Cargo.toml
runtime/wasmtime/src/: lib.rs
scripts/: runner-update.sh
src/: brass_config.rs  brass_runner.rs  brass_task.rs  gu_runner.rs  local_runner.rs  lwg.rs  main.rs  task.rs  wasm_engine.rs  workdir.rs
src/gwasm_dispatcher/: blob.rs.html  dispatcher.rs.html  error.rs.html  executor.rs.html  lib.rs.html  merger.rs.html  splitter.rs.html  taskdef.rs.html
src/lwg/: negociator.rs  storage.rs
tests/: test_local_runner.rs
tests/utils/: mod.rs
tests/wasm-binaries/: mandelbrot.js  mandelbrot.wasm
