[package]
name = "gwasm-runner"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
description = "Command line tool for running gWasm compatible apps locally, via Golem Unlimited or via Brass Golem."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "gwasm-dispatcher"
]

[features]
default=['with-gu-mode', 'with-brass-mode']
with-gu-mode=['zip', 'awc', 'actix', 'gu-client', 'gu-wasm-env-api', 'futures', 'actix-files','tokio-timer']
with-brass-mode=['gwasm-api', 'indicatif', 'lazy_static', 'regex', 'serde_urlencoded', 'serde_with']

[dependencies]
log="0.4"
env_logger = "0.6"
failure="0.1.5"
sp-wasm-engine = { git = "https://github.com/golemfactory/sp-wasm", branch="wasm-runner" }
structopt = { version="0.2", features = ["wrap_help", "suggestions", "color"] }
app_dirs = "1.2.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
gwasm-dispatcher = { path = "gwasm-dispatcher" }

serde_json="1.0.40"
serde= "1.0.99"
bytes = "0.4"

# with-gu-mode dependencies
[dependencies.zip]
version = "0.5.3"
optional=true

[dependencies.awc]
version = "0.2.6"
optional = true

[dependencies.gu-client]
git = "https://github.com/golemfactory/golem-unlimited.git"
branch="feature/api-on-actix-http-1"
optional = true

[dependencies.actix-http]
version ="0.2.4"
optional = true

[dependencies.actix-files]
version ="0.1"
optional = true

[dependencies.actix]
version="0.8"
optional=true

[dependencies.gu-wasm-env-api]
git="https://github.com/golemfactory/gu-exec-env-driver-wasm.git"
optional = true


[dependencies.futures]
version = "0.1.29"
optional=true

[dependencies.tokio-timer]
version = "0.2"
optional=true

# with-brass-mode dependencies
[dependencies.gwasm-api]
version = "0.1.1"
optional = true

[dependencies.indicatif]
version = "0.12.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.6.1"
optional = true

[dependencies.serde_with]
version = "1.3.1"
optional = true

[dependencies.regex]
version = "1.3.3"
optional = true

[dependencies.lazy_static]
version = "1.4.0"
optional = true

