[package]
name = "gwasm-runner"
version = "0.4.2"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
description = "Command line tool for running wasi apps."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "gwasm-dispatcher",
    "runtime",
    "runtime/wasmtime",
    "runtime/spwasm",
    "backend",
    "backend/brass",
    "backend/yagna",
    "backend/unlimited"
]

[features]
default=[
    'wasmtime',

    'with-yagna'
]

spwasm=['gwr-backend/spwasm']
wasmtime=['gwr-backend/wasmtime']

with-brass=['gwr-backend-brass']
with-gu=['gwr-backend-unlimited']
with-yagna=['gwr-backend-yagna']

[dependencies]
log="0.4"
env_logger = "0.6"
anyhow = "1.0.28"
gwr-runtime-api= { version="0.1", path="runtime" }
gwr-backend={ version = "0.1", path="backend" }
gwr-backend-brass={ version = "0.1", path="backend/brass", optional=true }
gwr-backend-unlimited={ version = "0.1", path="backend/unlimited", optional=true }
gwr-backend-yagna={ version = "0.1", path="backend/yagna", optional=true }

structopt = { version="0.2", features = ["wrap_help", "suggestions", "color"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
