[package]
name = "gwasm-api"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
description = "High level API for gWasmRunner compatible apps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.40"

[dependencies.serde]
version = "1.0.99"
features=["derive"]

[dependencies.failure]
version = "0.1.5"

[dependencies.uuid]
version = "0.7.4"
