[package]
name = "gwasm-dispatcher"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
description = "High level API for gWasmRunner compatible apps"

[dependencies]
serde_json="1.0.40"
thiserror = "1.0.14"

[dependencies.serde]
version = "1.0.99"
features=["derive"]
