[package]
name = "gwr-backend-brass"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
log="0.4"
gwasm-api="0.2"
gwr-backend={ version="0.1", path=".." }

indicatif = "0.12.0"
promptly = "0.2.0"
serde= "1.0.99"
serde_with = "1.3.1"
serde_json="1.0.40"
app_dirs = "1.2.1"