[package]
name = "gwr-backend-unlimited"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
log="0.4"
serde="1.0"
zip = "0.5.5"
serde_json="1.0.53"

gwr-backend={ version="0.1", path=".." }
actix="0.8"
futures="0.1"
gu-client = { git = "https://github.com/golemfactory/golem-unlimited.git", branch="feature/api-on-actix-http-1" }
gu-wasm-env-api = { git = "https://github.com/golemfactory/gu-exec-env-driver-wasm.git" }
awc = "0.2"
bytes="0.4"